src/test/ui/error-codes/E0425.stderr
error[E0425]: cannot find value `elf` in this scope
  --> $DIR/E0425.rs:13:9
   |
13 |         elf; //~ ERROR E0425
   |         ^^^ not found in this scope

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0425"
